--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h5 class="feature-4">Modern</h5>
 
         <footer class="footer">
-            <p>Copyright &copy; 2025 Web Design Mastery. All rights reserved.</p>
+            <p>Copyright &copy; 2025 Anirudh Chaudhary. All rights reserved.</p>
             <div class="footer__links">
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Instagram</a></li>
